// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Photos snapshot Should match  1`] = `
<section
  className="photo"
>
  <div
    className="photo__title"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root title__icon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M22 16V4c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2zm-11-4l2.03 2.71L16 11l4 5H8l3-4zM2 6v14c0 1.1.9 2 2 2h14v-2H4V6H2z"
      />
    </svg>
    <h1
      className="title__text"
    >
      Photos and videos
    </h1>
  </div>
  <div
    className="photo__main"
  >
    <img
      alt={0}
      className="main__item"
      id="item0"
      onClick={[Function]}
      src="testPhoto.com"
    />
    <img
      alt={1}
      className="main__item"
      id="item1"
      onClick={[Function]}
      src="mockPhoto.com"
    />
    <div
      className="main__new-photo"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root new-photo__icon"
        focusable="false"
        onClick={[Function]}
        viewBox="0 0 24 24"
      >
        <path
          d="M19 7v2.99s-1.99.01-2 0V7h-3s.01-1.99 0-2h3V2h2v3h3v2h-3zm-3 4V8h-3V5H5c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2v-8h-3zM5 19l3-4 2 3 3-4 4 5H5z"
        />
      </svg>
      <input
        name="file"
        onChange={[Function]}
        style={
          Object {
            "display": "none",
          }
        }
        type="file"
      />
    </div>
  </div>
</section>
`;

exports[`Photos snapshot Should match  2`] = `
<section
  className="photo"
>
  <div
    className="photo__title"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root title__icon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M22 16V4c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2zm-11-4l2.03 2.71L16 11l4 5H8l3-4zM2 6v14c0 1.1.9 2 2 2h14v-2H4V6H2z"
      />
    </svg>
    <h1
      className="title__text"
    >
      Photos and videos
    </h1>
  </div>
  <div
    className="photo__show"
  >
    <div
      className="show__top"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root top__icon"
        focusable="false"
        id="back"
        onClick={[Function]}
        viewBox="0 0 24 24"
      >
        <path
          d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root top__icon"
        focusable="false"
        id="delete"
        onClick={[Function]}
        viewBox="0 0 24 24"
      >
        <path
          d="M14.59 8L12 10.59 9.41 8 8 9.41 10.59 12 8 14.59 9.41 16 12 13.41 14.59 16 16 14.59 13.41 12 16 9.41 14.59 8zM12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
        />
      </svg>
    </div>
    <div
      className="show__main"
    >
      <div
        className="main__left"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root arrow"
          focusable="false"
          id="left-arrow"
          onClick={[Function]}
          viewBox="0 0 24 24"
        >
          <path
            d="M11.67 3.87L9.9 2.1 0 12l9.9 9.9 1.77-1.77L3.54 12z"
          />
        </svg>
      </div>
      <img
        alt="zoom"
        className="main__photo"
        src="mockPhoto.com"
      />
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root arrow"
        focusable="false"
        id="right-arrow"
        onClick={[Function]}
        viewBox="0 0 24 24"
      >
        <path
          d="M5.88 4.12L13.76 12l-7.88 7.88L8 22l10-10L8 2z"
        />
      </svg>
    </div>
    <div
      className="show__footer"
    >
      <img
        alt={0}
        className="footer__item "
        onClick={[Function]}
        src="testPhoto.com"
      />
      <img
        alt={1}
        className="footer__item color"
        onClick={[Function]}
        src="mockPhoto.com"
      />
    </div>
  </div>
</section>
`;
